# BSTU-Exam-Master

./: README.md
BSTU-Exam-Master_/BSTU-Exam-Master/: CMakeLists.txt  Tickets_and_Answers.cpp  Tickets_and_Answers.h  choise.cpp  choise.h  choise.ui  choose_dis.cpp  choose_dis.h  counter.cpp  counter.h  finder.cpp  finder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  proceed.cpp  proceed.h  proceed.ui  source.qrc
BSTU-Exam-Master_/build-BSTU-Exam-Master-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
BSTU-Exam-Master_/build-BSTU-Exam-Master-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
BSTU-Exam-Master_/build-BSTU-Exam-Master-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
BSTU-Exam-Master_/build-BSTU-Exam-Master-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/BSTU-Exam-Master_autogen/: deps
BSTU-Exam-Master_/build-BSTU-Exam-Master-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/BSTU-Exam-Master_autogen/EWIEGA46WW/: moc_choise.cpp  moc_choise.cpp.d  moc_dialog.cpp  moc_dialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
BSTU-Exam-Master_/build-BSTU-Exam-Master-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/BSTU-Exam-Master_autogen/include/: ui_dialog.h  ui_mainwindow.h
Conferense handouts/: conference_Philipiuk.docx  Конференция_Филипюк_Качинскас.docx
build-BSTU-Exam-Master-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-BSTU-Exam-Master-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-b27d6bafabd44aaa356a.json  cmakeFiles-v1-e55d03db732145cb873f.json  codemodel-v2-33d386bd3b62fb601aaa.json  (+7 more)
build-BSTU-Exam-Master-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-6d8d904c940ceb81581c.json
build-BSTU-Exam-Master-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-BSTU-Exam-Master-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/BSTU-Exam-Master_autogen/: deps  mocs_compilation.cpp
build-BSTU-Exam-Master-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/BSTU-Exam-Master_autogen/EWIEGA46WW/: moc_choise.cpp  moc_choise.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_source.cpp
build-BSTU-Exam-Master-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/BSTU-Exam-Master_autogen/include/: ui_choise.h  ui_mainwindow.h
functions/: Text Document.txt  Tickets_and_Answers.cpp  Tickets_and_Answers.h  counter.cpp  counter.h  finder.cpp  finder.h  main.cpp  main.h
functions/noDB/FSI/: answers.koi
(+33 files in other folders)
